samples/_failures_safe/1761454689_ed5070_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a7cd968.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_1a7cd968.c:174:19: error: expected ‘)’ at end of input
  174 |         free(graph
      |             ~     ^
      |                   )
./samples/SAFE/__tmp_1a7cd968.c:174:9: error: expected declaration or statement at end of input
  174 |         free(graph
      |         ^~~~
./samples/SAFE/__tmp_1a7cd968.c:174:9: error: expected declaration or statement at end of input
